--- a/resources/public/test.html
+++ b/resources/public/test.html
@@ -81,12 +81,24 @@
 
 <div class="user-menu">
 
-<div class="feed-control user-block">
+<div class="menu-item user-block">
     <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png">
-    <p class="feed-control">Ivan Grishaev</p>
+    <!-- <p class="menu-item">Ivan Grishaev</p> -->
+
+
+<div class="dropdown menu-item">
+  <a href="#" class="dropbtn">Ivan Grishaev &#9662;</a>
+  <div class="dropdown-content">
+    <a href="fff">Link 1</a>
+    <a href="aaa">Link 2</a>
+    <a href="ccc">Link 3</a>
+  </div>
 </div>
 
-<div class="dropdown feed-control">
+
+</div>
+
+<div class="dropdown menu-item">
   <a href="#" class="dropbtn">Order by &#9662;</a>
   <div class="dropdown-content">
     <a href="fff">Link 1</a>
@@ -95,7 +107,7 @@
   </div>
 </div>
 
-<div class="dropdown feed-control">
+<div class="dropdown menu-item">
   <a href="#" class="dropbtn">Layout &#9662;</a>
   <div class="dropdown-content">
     <a href="fff">Link 1</a>
@@ -104,16 +116,16 @@
   </div>
 </div>
 
-<div class="feed-control">
+<div class="menu-item">
     <a href="#">Logout</a>
 </div>
 
-<div class="feed-control flex-separator">
+<div class="menu-item flex-separator">
 
 </div>
 
 
-<div class="feed-control search-block">
+<div class="menu-item search-block">
     <input id="search-field" type="text" placeholder="Unput a URL here">
     <button id="search-button" type="Button">Search</button>
 </div>
@@ -166,9 +178,9 @@
 
 <!-- &emsp; <a href="#">Order by</a> &emsp; <a href="#">Options &#9662;</a> -->
 
-<div class="feed-controls">
+<div class="menu-items">
 
-<div class="dropdown feed-control">
+<div class="dropdown menu-item">
   <a href="#" class="dropbtn">Order by &#9662;</a>
   <div class="dropdown-content">
     <a href="fff">Link 1</a>
@@ -177,7 +189,7 @@
   </div>
 </div>
 
-<div class="dropdown feed-control">
+<div class="dropdown menu-item">
   <a href="#" class="dropbtn">Layout &#9662;</a>
   <div class="dropdown-content">
     <a href="fff">Link 1</a>
@@ -186,11 +198,11 @@
   </div>
 </div>
 
-<div class="feed-control">
+<div class="menu-item">
     <a href="#">Edit</a>
 </div>
 
-<div class="feed-control">
+<div class="menu-item">
     <a href="#">Unsubscribe!</a>
 </div>
 
@@ -210,9 +222,9 @@
                             <h2 class="overflow-split"><a href="#">Как нам спасти Россию</a></h2>
                             <p>Варламов // by Ivan Grishaev // 1 Jun 2018</p>
 
-<div class="feed-controls">
+<div class="menu-items">
 
-<div class="dropdown feed-control">
+<div class="dropdown menu-item">
   <a href="#" class="dropbtn">Order by &#9662;</a>
   <div class="dropdown-content">
     <a href="fff">Link 1</a>
@@ -221,7 +233,7 @@
   </div>
 </div>
 
-<div class="dropdown feed-control">
+<div class="dropdown menu-item">
   <a href="#" class="dropbtn">Layout &#9662;</a>
   <div class="dropdown-content">
     <a href="fff">Link 1</a>
@@ -230,15 +242,15 @@
   </div>
 </div>
 
-<div class="feed-control">
+<div class="menu-item">
     <a href="#">Star</a>
 </div>
 
-<div class="feed-control">
+<div class="menu-item">
     <a href="#">Bookmark</a>
 </div>
 
-<div class="feed-control">
+<div class="menu-item">
     <a href="#">Hide</a>
 </div>
 
