--- a/resources/public/test.html
+++ b/resources/public/test.html
@@ -11,9 +11,9 @@
 
         <div id="container">
 
-<div class="error-bar">
-    <p> <span class="error-close">&times;</span> Footer sdf sdf sdf sdf sdf sdf sdfs.</p>
-</div>
+            <div class="error-bar">
+                <p> <span class="error-close">&times;</span> Footer sdf sdf sdf sdf sdf sdf sdfs.</p>
+            </div>
 
 
             <div id="sidebar">
@@ -79,58 +79,58 @@
 
                     <div id="user-header">
 
-<div class="user-menu">
+                        <div class="user-menu">
 
-<div class="menu-item user-block">
-    <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png">
-    <!-- <p class="menu-item">Ivan Grishaev</p> -->
+                            <div class="menu-item">
+                                <a href="#">Home</a>
+                            </div>
 
+                            <div class="menu-item">
+                                <a href="#">About</a>
+                            </div>
 
-<div class="dropdown menu-item">
-  <a href="#" class="dropbtn">Ivan Grishaev &#9662;</a>
-  <div class="dropdown-content">
-    <a href="fff">Link 1</a>
-    <a href="aaa">Link 2</a>
-    <a href="ccc">Link 3</a>
-  </div>
-</div>
+                            <div class="menu-item">
+                                <a href="#">Terms</a>
+                            </div>
 
+                            <div class="menu-item">
+                                <a href="#">Privacy</a>
+                            </div>
 
-</div>
+                            <div class="menu-item flex-separator">
+                            </div>
 
-<div class="dropdown menu-item">
-  <a href="#" class="dropbtn">Order by &#9662;</a>
-  <div class="dropdown-content">
-    <a href="fff">Link 1</a>
-    <a href="aaa">Link 2</a>
-    <a href="ccc">Link 3</a>
-  </div>
-</div>
+                            <div class="menu-item search-block">
+                                <input id="search-field" type="text" placeholder="Unput a URL here">
+                                <button class="btn-submit" type="Button">Search</button>
+                            </div>
 
-<div class="dropdown menu-item">
-  <a href="#" class="dropbtn">Layout &#9662;</a>
-  <div class="dropdown-content">
-    <a href="fff">Link 1</a>
-    <a href="aaa">Link 2</a>
-    <a href="ccc">Link 3</a>
-  </div>
-</div>
+                            <div class="menu-item user-block">
+                                <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png">
+                                <div class="dropdown menu-item">
+                                    <a href="#" class="dropbtn">Ivan Grishaev &#9662;</a>
+                                    <div class="dropdown-content">
+                                        <a href="#">Profile</a>
+                                        <a href="#">Logout</a>
+                                    </div>
+                                </div>
+                            </div>
 
-<div class="menu-item">
-    <a href="#">Logout</a>
-</div>
+                        </div>
 
-<div class="menu-item flex-separator">
+                    </div>
 
-</div>
+                    <div id="auth-form">
+                        <h3>Sign in by email</h3>
+                        <p class="subtitle">No password is required. We'll send you a secret link.</p>
+                        <div>
+                            <input type="email" placeholder="email">
+                            <button class="btn-submit" type="Button">Send</button>
+                        </div>
 
+                        <h3>or</h3>
 
-<div class="menu-item search-block">
-    <input id="search-field" type="text" placeholder="Unput a URL here">
-    <button id="search-button" type="Button">Search</button>
-</div>
-
-</div>
+                        <a class="action-main" href="#">Stay with your Google account</a>
 
                     </div>
 
@@ -146,7 +146,7 @@
                             </div>
 
                             <div class="search-result-item-actions">
-                                <a class="action-vert action-main" href="#">Follow</a>
+                                <a class="action-vert action-main-vert" href="#">Follow</a>
                                 <a class="action-vert" href="#">Similar</a>
                             </div>
 
@@ -163,7 +163,7 @@
                             </div>
 
                             <div class="search-result-item-actions">
-                                <a class="action-vert action-main" href="#">Follow</a>
+                                <a class="action-vert action-main-vert" href="#">Follow</a>
                                 <a class="action-vert" href="#">Similar</a>
                             </div>
 
@@ -176,37 +176,37 @@
                         <h1 class="overflow-split"><a href="#">Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов Варламов </a></h1>
                         <p>Варламов // by Ivan Grishaev // 1 Jun 2018</p>
 
-<!-- &emsp; <a href="#">Order by</a> &emsp; <a href="#">Options &#9662;</a> -->
+                        <!-- &emsp; <a href="#">Order by</a> &emsp; <a href="#">Options &#9662;</a> -->
 
-<div class="menu-items">
+                        <div class="menu-items">
 
-<div class="dropdown menu-item">
-  <a href="#" class="dropbtn">Order by &#9662;</a>
-  <div class="dropdown-content">
-    <a href="fff">Link 1</a>
-    <a href="aaa">Link 2</a>
-    <a href="ccc">Link 3</a>
-  </div>
-</div>
+                            <div class="dropdown menu-item">
+                                <a href="#" class="dropbtn">Order by &#9662;</a>
+                                <div class="dropdown-content">
+                                    <a href="fff">Link 1</a>
+                                    <a href="aaa">Link 2</a>
+                                    <a href="ccc">Link 3</a>
+                                </div>
+                            </div>
 
-<div class="dropdown menu-item">
-  <a href="#" class="dropbtn">Layout &#9662;</a>
-  <div class="dropdown-content">
-    <a href="fff">Link 1</a>
-    <a href="aaa">Link 2</a>
-    <a href="ccc">Link 3</a>
-  </div>
-</div>
+                            <div class="dropdown menu-item">
+                                <a href="#" class="dropbtn">Layout &#9662;</a>
+                                <div class="dropdown-content">
+                                    <a href="fff">Link 1</a>
+                                    <a href="aaa">Link 2</a>
+                                    <a href="ccc">Link 3</a>
+                                </div>
+                            </div>
 
-<div class="menu-item">
-    <a href="#">Edit</a>
-</div>
+                            <div class="menu-item">
+                                <a href="#">Edit</a>
+                            </div>
 
-<div class="menu-item">
-    <a href="#">Unsubscribe!</a>
-</div>
+                            <div class="menu-item">
+                                <a href="#">Unsubscribe!</a>
+                            </div>
 
-</div>
+                        </div>
 
 
 
@@ -222,40 +222,40 @@
                             <h2 class="overflow-split"><a href="#">Как нам спасти Россию</a></h2>
                             <p>Варламов // by Ivan Grishaev // 1 Jun 2018</p>
 
-<div class="menu-items">
+                            <div class="menu-items">
 
-<div class="dropdown menu-item">
-  <a href="#" class="dropbtn">Order by &#9662;</a>
-  <div class="dropdown-content">
-    <a href="fff">Link 1</a>
-    <a href="aaa">Link 2</a>
-    <a href="ccc">Link 3</a>
-  </div>
-</div>
+                                <div class="dropdown menu-item">
+                                    <a href="#" class="dropbtn">Order by &#9662;</a>
+                                    <div class="dropdown-content">
+                                        <a href="fff">Link 1</a>
+                                        <a href="aaa">Link 2</a>
+                                        <a href="ccc">Link 3</a>
+                                    </div>
+                                </div>
 
-<div class="dropdown menu-item">
-  <a href="#" class="dropbtn">Layout &#9662;</a>
-  <div class="dropdown-content">
-    <a href="fff">Link 1</a>
-    <a href="aaa">Link 2</a>
-    <a href="ccc">Link 3</a>
-  </div>
-</div>
+                                <div class="dropdown menu-item">
+                                    <a href="#" class="dropbtn">Layout &#9662;</a>
+                                    <div class="dropdown-content">
+                                        <a href="fff">Link 1</a>
+                                        <a href="aaa">Link 2</a>
+                                        <a href="ccc">Link 3</a>
+                                    </div>
+                                </div>
 
-<div class="menu-item">
-    <a href="#">Star</a>
-</div>
+                                <div class="menu-item">
+                                    <a href="#">Star</a>
+                                </div>
 
-<div class="menu-item">
-    <a href="#">Bookmark</a>
-</div>
+                                <div class="menu-item">
+                                    <a href="#">Bookmark</a>
+                                </div>
 
-<div class="menu-item">
-    <a href="#">Hide</a>
-</div>
+                                <div class="menu-item">
+                                    <a href="#">Hide</a>
+                                </div>
 
 
-</div>
+                            </div>
 
 
                             <div class="entry-content overflow-split">
