--- a/resources/public/test.html
+++ b/resources/public/test.html
@@ -208,11 +208,65 @@
 
                         </div>
 
+                    </div>
 
 
+                    <!-- feed list layout -->
+                    <div id="feed-layout-list">
 
+                    <div class="feed-layout-list-item">
+                    <div class="_date">
+                        3 days
+                    </div>
+                    <div class="_title overflow-cut">
+                        <a href="#">How to sort elements in Clojure</a>
+                    </div>
+
+<div class="flex-separator"></div>
+
+                    <div class="_actions">
+                        <a href="#">Bookmark</a>
+                        <a href="#">Hide</a>
+                    </div>
 
                     </div>
+
+                    <div class="feed-layout-list-item">
+                    <div class="_date">
+                        1 year
+                    </div>
+                    <div class="_title overflow-cut">
+                        <a href="#">Глава Омской области: у инвесторов нет большого желания двигаться в регион, где есть мем «Не пытайся покинуть Омск»</a>
+                    </div>
+
+                    <div class="flex-separator"></div>
+
+                    <div class="_actions">
+                        <a href="#">Bookmark</a>
+                        <a href="#">Hide</a>
+                    </div>
+                    </div>
+
+
+                        <!-- <table class="feed-layout-titles"> -->
+                        <!--     <tbody> -->
+                        <!--         <tr> -->
+                        <!--             <td class="cell-date">1 day ago</td> -->
+                        <!--             <td class="cell-title"> -->
+                        <!--                 <h3>How to sort elements in Clojure</h3> -->
+                        <!--             </td> -->
+                        <!--             <\!-- <td>#clojure #test #dev</td> -\-> -->
+                        <!--             <td class="cell-actions"> -->
+                        <!--                 <a href="#">test</a> -->
+                        <!--                 <a href="#">test</a> -->
+                        <!--             </td> -->
+                        <!--         </tr> -->
+
+                        <!--     </tbody> -->
+                        <!-- </table> -->
+                    </div>
+                    <!-- feed list layout -->
+
 
 
                     <div id="feed-items">
@@ -285,8 +339,13 @@
 
                     </div>
 
+
                     <div class="read-more">
-                        <p>Loading...<p>
+
+                        <div class="loader-wrapper">
+                            <div class="loader"></div>
+                        </div>
+                        <span>Loading...<span>
                     </div>
 
                 </div>
