--- a/resources/public/test.html
+++ b/resources/public/test.html
@@ -105,9 +105,9 @@
                                 <button class="btn-submit" type="Button">Search</button>
                             </div>
 
-                            <div class="menu-item user-block">
+                            <div class="menu-item user-block last">
                                 <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png">
-                                <div class="dropdown menu-item">
+                                <div class="dropdown menu-item last">
                                     <a href="#" class="dropbtn">Ivan Grishaev &#9662;</a>
                                     <div class="dropdown-content">
                                         <a href="#">Profile</a>
